--- a/catalog.html
+++ b/catalog.html
@@ -77,9 +77,9 @@
               <span class="sorted-hotel__found_type">Гостиница</span>
               <span class="sorted-hotel__found_price">от 4000 Р.</span>
             </p>
-            <p class="sorted-hotel__button">
-              <a class="sorted-hotel__button_details" href="">Подробнее</a>
-              <a class="sorted-hotel__button_book" href="">Забронировать</a>
+            <p class="sorted-hotel__link">
+              <a class="sorted-hotel__link_details" href="">Подробнее</a>
+              <a class="sorted-hotel__link_book" href="">Забронировать</a>
             </p>
             <div class="sorted-hotel__rating">
               <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
@@ -93,9 +93,9 @@
               <span class="sorted-hotel__found_type">Мотель</span>
               <span class="sorted-hotel__found_price">от 3000 Р.</span>
             </p>
-            <p class="sorted-hotel__button">
-              <a class="sorted-hotel__button_details" href="">Подробнее</a>
-              <a class="sorted-hotel__button_book" href="">Забронировать</a>
+            <p class="sorted-hotel__link">
+              <a class="sorted-hotel__link_details" href="">Подробнее</a>
+              <a class="sorted-hotel__link_book" href="">Забронировать</a>
             </p>
             <div class="sorted-hotel__rating">
               <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
@@ -109,9 +109,9 @@
               <span class="sorted-hotel__found_type">Апартаменты</span>
               <span class="sorted-hotel__found_price">от 2000 Р.</span>
             </p>
-            <p class="sorted-hotel__button">
-              <a class="sorted-hotel__button_details" href="">Подробнее</a>
-              <a class="sorted-hotel__button_book" href="">Забронировать</a>
+            <p class="sorted-hotel__link">
+              <a class="sorted-hotel__link_details" href="">Подробнее</a>
+              <a class="sorted-hotel__link_book" href="">Забронировать</a>
             </p>
             <div class="sorted-hotel__rating">
               <span class="sorted-hotel__rating_star"></span> <!-- звёздочки рейтинга img/svg/star.svg -->
@@ -126,9 +126,9 @@
       <p class="footer__social-hashtag">#visitSEDONA</p>
 
       <ul class="footer__social-list">
-        <li class="footer__social-item"><a class="footer__social-link" href="">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
-        <li class="footer__social-item"><a class="footer__social-link" href="">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
-        <li class="footer__social-item"><a class="footer__social-link" href="">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
+        <li class="footer__social-item"><a class="footer__social-link_tw" href="">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
+        <li class="footer__social-item"><a class="footer__social-link_fb" href="">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
+        <li class="footer__social-item"><a class="footer__social-link_youtube" href="">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
       </ul>
 
       <!-- логотип академии img/svg/logo-htmlacademy.svg -->
