--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
       <p class="footer__social-hashtag">#visitSEDONA</p>
 
       <ul class="footer__social-list">
-        <li class="footer__social-item"><a class="footer__social-link" href="">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
-        <li class="footer__social-item"><a class="footer__social-link" href="">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
-        <li class="footer__social-item"><a class="footer__social-link" href="">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
+        <li class="footer__social-item"><a class="footer__social-link_tw" href="">Твитер</a></li> <!-- иконка img/svg/twitter.svg -->
+        <li class="footer__social-item"><a class="footer__social-link_fb" href="">Фэйсбук</a></li> <!-- иконка img/svg/fb-icon.svg -->
+        <li class="footer__social-item"><a class="footer__social-link_youtube" href="">Ютуб</a></li> <!-- иконка img/svg/youtube.svg -->
       </ul>
 
       <!-- логотип академии img/svg/logo-htmlacademy.svg -->
