--- a/catalog.html
+++ b/catalog.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="filter-hotel__criterion criterion">
-          <h3 class="criterion__header">Стоиcriterion__headerмость в сутки(Р):</h3>
+          <h3 class="criterion__header">Стоимость в сутки(Р):</h3>
           <span></span> <!-- изображение ползунка img/svg/filter-button.svg -->
           <button type="submit">показать</button>
         </div>
