--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <p>Укажите предполагаемые даты поездки, и&nbsp;мы&nbsp;покажем вам лучшие предложения гостиниц в Седоне</p>
         <!-- здесь будет форма для поиска гостиницы -->
         <!-- в форме используется изображение календаря img/svg/calendar.svg -->
-        <button type="button">Посик гостиницы в Седоне</button>
+        <button type="button">Поиск гостиницы в Седоне</button>
 
         <img class="search-hotel__map" src="img/map.png" width="1200" height="594" alt="Карта как проехать к городку Седона">
       </section>
